--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,22 @@ matrix:
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "0.4"
       env: TEST=true ALLOW_FAILURE=true
+    #powerjobs
+    - node_js: "lts/*"
+      env: PRETEST=true
+      arch: ppc64le
+    - node_js: "lts/*"
+      env: POSTTEST=true
+      arch: ppc64le
+    - node_js: "0.11"
+      env: TEST=true ALLOW_FAILURE=true
+      arch: ppc64le
+    - node_js: "0.9"
+      env: TEST=true ALLOW_FAILURE=true
+      arch: ppc64le
+    - node_js: "0.4"
+      env: TEST=true ALLOW_FAILURE=true 
+      arch: ppc64le
   allow_failures:
     - os: osx
     - env: TEST=true ALLOW_FAILURE=true
